[tool.poetry]
name = "lgg-api"
version = "0.1.0"
description = ""
authors = ["Q2TM"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
lakeshore = "^1.8.1"
fastapi = { extras = ["standard"], version = "^0.115.14" }
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
